--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,12 @@
   <title>FinalProject</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "path/to/highcharts.js", "chartkick" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <!-- Navbar --> 
 
   <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
