added users controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="/dashboard">Dashboard</a></li>
+        <li class="nav-link"><a href="/How It Works">Dashboard</a></li>
         <li class="nav-link"><a href="/explore">Explore</a></li>
          <li class="nav-link"><a href="/add">Add</a></li>
       </ul>
