added gems for sass, neat, and bitters

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <!-- Navbar --> 
   <header class="navigation" role="banner">
   <div class="navigation-wrapper">
-    <a href="/" class="logo">
+ <!--    <a href="/" class="logo"> -->
      <!--  <img src="hippo_nav.svg"  style="height:100px;" 
         style="width:100px;" alt="25" fill="white"/> -->
     </a>
@@ -20,8 +20,6 @@
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
         <li class="nav-link"><a href="/How It Works">Dashboard</a></li>
-        <li class="nav-link"><a href="/explore">Explore</a></li>
-         <li class="nav-link"><a href="/add">Add</a></li>
       </ul>
     </nav>
     
