added font-family Helvetic Neue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,11 @@
 @import "home";
 @import "users";
 
+@font-face {
+  font-family: 'Helvetic Neue', 'Helvetica';
+  src: url('Helvetic_Neue.woff');
+}
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
