--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,68 +1,37 @@
-<div class="home-wrapper">
-  <div class="hero">
-     <div class="hero-inner">
-        <div class="hero-copy">
-          <div class="display"> <h1>  OilXchange </h1> 
-            <h2> All Your Subscriptions, in one place</h2>
-          </div>
-           <p>Automatically detect and scan for the services that you pay for on a recurring basis. Set bill dates and reminders for your upcoming subscriptions. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima aperiam nam culpa ducimus adipisci fugit, cumque sequi odio eaque, ipsam. Nisi rem placeat nihil tempore saepe officiis, ut. Accusantium, consequatur?</p>     
-        </div>
-     </div>
+<div id="js-parallax-window" class="parallax-window">
+  <div class="parallax-static-content">
+    <b>Parallax Window</b>
   </div>
-  <div class="spacer"></div>
-  <div class="spacer"></div>
-  <div class="spacer"></div>
-
-    <div class="device-background">
-      <div class="device-text">
-        <h4>Oilxchange is Awesome </h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa iusto quisquam eius esse iste quod incidunt tenetur et aperiam, animi architecto quas doloribus saepe quis, possimus amet debitis atque similique!</p>
-      </div>
-     <div class="macbook-pro-wrapper">
-       <div class="md-macbook-pro md-glare">
-         <div class="md-lid">
-             <div class="md-camera"></div>
-             <div class="md-screen">
-                <img src="dashboard.png">
-             </div>
-       </div>
-       <div class="md-base"></div>
-     </div>
-    </div> 
-  </div>  
-  
-<div class="bottom-info">
+  <div id="js-parallax-background" class="parallax-background"></div>
+</div>
 
 <ul class="bullets">
   <li class="bullet">
     <div class="bullet-icon bullet-icon-1">
-      <img src="badge1-box.svg" alt="">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
+" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Boxes</h2>
+      <h2>This Bullet Title</h2>
       <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
       </div>
   </li>  
   <li class="bullet">
     <div class="bullet-icon bullet-icon-2">
-      <img src="badge2-play.svg" alt="">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Digital Content</h2>
+      <h2>Another Bullet Title</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
     </div>
   </li>
   <li class="bullet">
     <div class="bullet-icon bullet-icon-3">
-      <img src="badge3-mag.svg" alt="">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Magazines</h2>
+      <h2>Last Bullet Title</h2>
       <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
     </div>
   </li> 
 </ul>
-<div class="clear"></div>
-<div class="getstarted">
-<%= link_to 'Get Started Today >', new_user_registration_path %>
-</div>
