added additional fields to devise.  Added the registration controller to handle devise fields.  Changed routing in routes for devise.  Fixed sprockets error by adding line in application.rb file

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,37 +10,52 @@
 
   <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
+    <%= f.text_field :last_name %>
   </div>
 
   <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title, autofocus: true %>
+    <%= f.text_field :title %>
   </div>
 
   <div class="field">
     <%= f.label :company %><br />
-    <%= f.text_field :company, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title, autofocus: true %>
+    <%= f.text_field :company %>
   </div>
 
   <div class="field">
     <%= f.label :market_interest %><br />
-    <%= f.text_field :market_position, autofocus: true %>
+    <%= f.text_field :market_position %>
   </div>
 
   <div class="field">
     <%= f.label :country %><br />
-    <%= f.text_field :country, autofocus: true %>
+    <%= f.text_field :country %>
   </div>  
 
   <div class="field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </div>  
+
+  <div class="field">
+    <%= f.label :state %><br />
+    <%= f.text_field :state %>
+  </div>
+
+  <div class="field">
+    <%= f.label :postal_code %><br />
+    <%= f.text_field :postal_code %>
+  </div>
+
+  <div class="field">
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
