--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,12 +1,16 @@
+#black-strip {
+  background-color: black;
+}
+
 header.navigation {
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
   $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
+  $orange: #f78f1e !default;
   $large-screen: em(860) !default;
   $navigation-padding: 1em;
-  $navigation-background: $dark-gray;
-  $navigation-color: transparentize(white, 0.3);
+  $navigation-background: $orange;
+  $navigation-color: #2a3440;
   $navigation-color-hover: white;
   $navigation-height: 60px;
   $navigation-nav-button-background: $action-color;
@@ -20,7 +24,6 @@ header.navigation {
   $horizontal-bar-mode: $large-screen;
 
   background-color: $navigation-background;
-  border-bottom: 1px solid darken($navigation-background, 10);
   min-height: $navigation-height;
   width: 100%;
   z-index: 999;
@@ -44,16 +47,17 @@ header.navigation {
     }
   }
 
-  // Mobile view
+  
+// Mobile view
 
   .navigation-menu-button {
     color: $navigation-color;
     display: block;
     float: right;
+    font-weight: 700;
     line-height: $navigation-height;
     margin: 0;
     padding-right: 1em;
-    text-decoration: none;
     text-transform: uppercase;
 
     @include media ($horizontal-bar-mode) {
@@ -66,7 +70,8 @@ header.navigation {
     }
   }
 
-  // Nav menu
+  
+// Nav menu
 
   nav {
     float: none;
@@ -79,7 +84,8 @@ header.navigation {
   }
 
   ul.navigation-menu {
-    -webkit-transform-style: preserve-3d; // stop webkit flicker
+    -webkit-transform-style: preserve-3d; 
+// stop webkit flicker
     clear: both;
     display: none;
     margin: 0 auto;
@@ -99,7 +105,8 @@ header.navigation {
     }
   }
 
-  // The nav items
+  
+// The nav items
 
   ul li.nav-link {
     background: $navigation-background;
@@ -122,6 +129,7 @@ header.navigation {
     a {
       color: $navigation-color;
       display: inline-block;
+      font-weight: 400;
       text-decoration: none;
 
       @include media ($horizontal-bar-mode) {
@@ -140,7 +148,8 @@ header.navigation {
     padding-bottom: 3px;
   }
 
-  // Sub menus
+  
+// Sub menus
 
   li.more.nav-link {
     padding-right: 0;
@@ -255,12 +264,86 @@ header.navigation {
     }
   }
 
-  // Elements on the far right
+  
+// Elements on the far right
+#container {
+    width:780px;
+    margin:0 auto;
+    position: relative;
+}
+
+#content {
+    width:520px;
+    min-height:300px;
+}
+a:link, a:visited {
+    color:#27b;
+    text-decoration:none;
+}
+a:hover {
+    text-decoration:underline;
+}
+a img {
+    border-width:0;
+}
+#topnav {
+    padding:10px 0px 12px;
+    font-size:11px;
+    line-height:23px;
+    text-align:right;
+}
+#topnav a.signin {
+    background:#88bbd4;
+    padding:4px 6px 6px;
+    text-decoration:none;
+    font-weight:bold;
+    color:#fff;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    *background:transparent url("images/signin-nav-bg-ie.png") no-repeat 0 0;
+    *padding:4px 12px 6px;
+}
+#topnav a.signin:hover {
+    background:#59B;
+    *background:transparent url("images/signin-nav-bg-hover-ie.png") no-repeat 0 0;
+    *padding:4px 12px 6px;
+}
+#topnav a.signin, #topnav a.signin:hover {
+    *background-position:0 3px!important;
+}
+
+a.signin {
+    position:relative;
+    margin-left:3px;
+}
+a.signin span {
+    background-image:url("images/toggle_down_light.png");
+    background-repeat:no-repeat;
+    background-position:100% 50%;
+    padding:4px 16px 6px 0;
+}
+#topnav a.menu-open {
+    background:#ddeef6!important;
+    color:#666!important;
+    outline:none;
+}
+#small_signup {
+    display:inline;
+    float:none;
+    line-height:23px;
+    margin:25px 0 0;
+    width:170px;
+}
+a.signin.menu-open span {
+    background-image:url("images/toggle_up_dark.png");
+    color:#789;
+}
 
   .navigation-tools {
     background: #505050;
     clear: both;
-    display: block;
+    display: inline-block;
     height: $navigation-height;
 
     @include media($horizontal-bar-mode) {
@@ -268,9 +351,55 @@ header.navigation {
       clear: none;
       float: right;
     }
-  }
 
-  // Search bar
+}
+
+ .navigation-tools-login {
+    background: #505050;
+    clear: both;
+    display: inline-block;
+    height: $navigation-height;
+
+    @include media($horizontal-bar-mode) {
+      background: transparent;
+      clear: none;
+      float: right;
+    }
+    .field {
+        width: 200px;
+        margin-right: 15px;
+        margin-top: 5px;
+        padding: 10px;
+        float: left;
+        background-color: transparent;
+    }
+}
+     
+     .submitbutton {
+         float: left;
+         width: 20%;
+         margin-top: -15px;
+         margin-left: 0px;
+         -webkit-border-radius: 0px 0px 10px 10px;
+         -moz-border-radius: 0px 0px 10px 10px;
+         border-radius: 0px 0px 10px 10px;
+         background-color:transparent;
+         opacity: .7;
+         
+         color: #2a3440;
+        }
+
+     .submitbutton-signup {
+          float: left;
+          margin-right: 10px;
+          margin-top: -15px;
+          background-color: transparent;
+          color: $dark-gray;
+          opacity: .4;
+        }
+
+  
+// Search bar
 
   .search-bar {
     $search-bar-border-color: $base-border-color;
@@ -331,4 +460,85 @@ header.navigation {
       }
     }
   }
+}
+
+#signin_menu {
+    -moz-border-radius-topleft:5px;
+    -moz-border-radius-bottomleft:5px;
+    -moz-border-radius-bottomright:5px;
+    -webkit-border-top-left-radius:5px;
+    -webkit-border-bottom-left-radius:5px;
+    -webkit-border-bottom-right-radius:5px;
+    display:none;
+    background-color:#ddeef6;
+    position:absolute;
+    width:210px;
+    z-index:100;
+    border:1px transparent;
+    text-align:left;
+    padding:12px;
+    top: 24.5px;
+    right: 0px;
+    margin-top:5px;
+    margin-right: 0px;
+    *margin-right: -1px;
+    color:#789;
+    font-size:11px;
+}
+
+#signin_menu input[type=text], #signin_menu input[type=password] {
+    display:block;
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    border:1px solid #ACE;
+    font-size:13px;
+    margin:0 0 5px;
+    padding:5px;
+    width:203px;
+}
+#signin_menu p {
+    margin:0;
+}
+#signin_menu a {
+    color:#6AC;
+}
+#signin_menu label {
+    font-weight:normal;
+}
+#signin_menu p.remember {
+    padding:10px 0;
+}
+#signin_menu p.forgot, #signin_menu p.complete {
+    clear:both;
+    margin:5px 0;
+}
+#signin_menu p a {
+    color:#27B!important;
+}
+#signin_submit {
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    background:#39d url('images/bg-btn-blue.png') repeat-x scroll 0 0;
+    border:1px solid #39D;
+    color:#fff;
+    text-shadow:0 -1px 0 #39d;
+    padding:4px 10px 5px;
+    font-size:11px;
+    margin:0 5px 0 0;
+    font-weight:bold;
+}
+#signin_submit::-moz-focus-inner {
+padding:0;
+border:0;
+}
+#signin_submit:hover, #signin_submit:focus {
+    background-position:0 -5px;
+    cursor:pointer;
+}
+
+.logout-link {
+    float: right;
+    position: absolute;
+    top: 20px;
+    right: -70px;
 }
