--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,79 +1,86 @@
-<h2>Sign up</h2>
+<div class="signup-page-wrapper">
+
+<h2 class="signup-header">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <div class="signup-wrapper">  
+    <div class="field">
+    
+      <%= f.text_field :first_name, autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+    <div class="field">
+
+      <%= f.text_field :last_name %>
+    </div>
+
+    <div class="field">
+
+      <%= f.text_field :title %>
+    </div>
+
+    <div class="field">
+    
+      <%= f.text_field :company %>
+    </div>
+
+    <div class="field">
+
+      <%= f.text_field :market_position %>
+    </div>
+
+    <div class="field">
+
+      <%= f.text_field :country %>
+    </div>  
+
+     <div class="field">
+
+      <%= f.text_field :city %>
+    </div>  
+
+     <div class="field">
+     <%= f.text_field :state %>
+    </div>
+
+     <div class="field">
+      <%= f.text_field :postal_code %>
+    </div>
+
+    <div class="field">
+      <%= f.text_field :phone %>
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="field divide2">
+      <%= f.email_field :email %>
+    </div>
+
+    <div class="field divide2">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
+
+    <div class="field divide2">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
+  
+    <div id="signup-button">
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+  <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
+      <%= render "devise/shared/links" %>
+    </div>
+</div>
 
-  <div class="field">
-    <%= f.label :company %><br />
-    <%= f.text_field :company %>
-  </div>
-
-  <div class="field">
-    <%= f.label :market_interest %><br />
-    <%= f.text_field :market_position %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %><br />
-    <%= f.text_field :country %>
-  </div>  
-
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>  
-
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div>
-
-  <div class="field">
-    <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
