--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,20 @@
 </head>
 <body>
 
-<!-- Navbar --> 
-  <header class="navigation" role="banner">
+<!-- Navbar -->
+<div id="black-strip"> 0 </div> 
+ <header class="navigation" role="banner">
   <div class="navigation-wrapper">
- <!--    <a href="/" class="logo"> -->
-     <!--  <img src="hippo_nav.svg"  style="height:100px;" 
-        style="width:100px;" alt="25" fill="white"/> -->
+    <a href="/" class="logo">
+      <img src="hippo_nav.svg"  style="height:100px;" 
+        style="width:100px;" alt="25" fill="white"/>
     </a>
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
         <li class="nav-link"><a href="/How It Works">How It Works</a></li>
+        <li class="nav-link"><a href="/about">About Us</a></li>
+        
       </ul>
     </nav>
     
@@ -28,22 +31,19 @@
 
       <div class="navigation-tools">
         <div class="search-bar">
-          <form role="search">
-            <input type="search" placeholder="Enter Search" />
-            <button type="submit">
-              <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="Search Icon">
-            </button>
-          </form>
               <%= link_to('Logout', destroy_user_session_path, :class => "logout-link", :method => :delete) %>        
       </div>
 
           <% else %>          
-            
-        <div class="actions">
-          
-          <%= link_to('| Sign Up', new_user_registration_path,  :class => "Signup-link") %>
-
-        </div>
+            <nav role="navigation">
+      <ul id="js-navigation-menu" class="navigation-menu show">
+        <li class="nav-link"><a href="/log in">Log In</a></li>
+        <li class="nav-link"><a >|</a></li>
+        <li class="nav-link"><a href="/about">Sign Up</a></li>
+        
+      </ul>
+    </nav>
+        
     <% end %>
 
       </div>
