--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -2,7 +2,7 @@
   @include outer-container(50%);
   .signup-header {
   text-align: center;
-  margin-top: 26px;
+  margin-top: 32px;
     } 
   input {
  
@@ -14,13 +14,9 @@
   input {
     @include span-columns(5 of 12);
   }
-  .divide2 input {
-    @include span-columns(6 of 12);
-    background-color: red;
-  }
 }
 
 #signup-button {
-
+  position: center;
 }
 
