--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,75 +1,70 @@
 <div class="signup-page-wrapper">
 
-<h2 class="signup-header">Sign up</h2>
+<h2 class="signup-header">Sign Up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   <div class="signup-wrapper">  
     <div class="field">
     
-      <%= f.text_field :first_name, autofocus: true %>
+      <%= f.text_field :first_name, placeholder: "First Name", autofocus: true %>
     </div>
 
     <div class="field">
 
-      <%= f.text_field :last_name %>
+      <%= f.text_field :last_name, placeholder: "Last Name" %>
     </div>
 
     <div class="field">
 
-      <%= f.text_field :title %>
+      <%= f.text_field :title, placeholder: "Title" %>
     </div>
 
     <div class="field">
     
-      <%= f.text_field :company %>
+      <%= f.text_field :company, placeholder: "Company" %>
     </div>
 
     <div class="field">
 
-      <%= f.text_field :market_position %>
+      <%= f.text_field :market_position, placeholder: "Area of Interest" %>
     </div>
 
     <div class="field">
 
-      <%= f.text_field :country %>
+      <%= f.text_field :country, placeholder: "Country" %>
     </div>  
 
      <div class="field">
 
-      <%= f.text_field :city %>
+      <%= f.text_field :city, placeholder: "City" %>
     </div>  
 
      <div class="field">
-     <%= f.text_field :state %>
+     <%= f.text_field :state, placeholder: "State/Providence" %>
     </div>
 
      <div class="field">
-      <%= f.text_field :postal_code %>
+      <%= f.text_field :postal_code, placeholder: "Zip/Postal Code" %>
     </div>
 
     <div class="field">
-      <%= f.text_field :phone %>
+      <%= f.text_field :phone, placeholder: "Phone (include country code)" %>
     </div>
 
-    <br/>
-    <br/>
+    <br>
+    <br>
 
-    <div class="field divide2">
-      <%= f.email_field :email %>
+    <div class="field">
+      <%= f.email_field :email, placeholder: "Email" %>
     </div>
 
-    <div class="field divide2">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
-      <%= f.password_field :password, autocomplete: "off" %>
+    <div class="field">
+      <%= f.password_field :password, placeholder: "Password (8 characters minimum)", autocomplete: "off" %>
     </div>
 
-    <div class="field divide2">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <div class="field">
+      <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", autocomplete: "off" %>
     </div>
   </div>
 
