--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,48 +9,49 @@
 <body>
 
 <!-- Navbar -->
-<div id="black-strip"> 0 </div> 
- <header class="navigation" role="banner">
-  <div class="navigation-wrapper">
-    <a href="/" class="logo">
-      <img src="hippo_nav.svg"  style="height:100px;" 
-        style="width:100px;" alt="25" fill="white"/>
-    </a>
-    <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-    <nav role="navigation">
-      <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="/How It Works">How It Works</a></li>
-        <li class="nav-link"><a href="/about">About Us</a></li>
-        
-      </ul>
-    </nav>
-    
-    <div class="navigation-tools-login">
-    <% if user_signed_in? %>
+<div id="senior-nav-wrapper">
+  <div id="black-strip"> 0 </div> 
+   <header class="navigation" role="banner">
+    <div class="navigation-wrapper">
+      <a href="/" class="logo">
+        <img src="hippo_nav.svg"  style="height:100px;" 
+          style="width:100px;" alt="25" fill="white"/>
+      </a>
+      <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+      <nav role="navigation">
+        <ul id="js-navigation-menu" class="navigation-menu show">
+          <li class="nav-link"><a href="/How It Works">How It Works</a></li>
+          <li class="nav-link"><a href="/about">About Us</a></li>
+          
+        </ul>
+      </nav>
+      
+      <div class="navigation-tools-login">
+      <% if user_signed_in? %>
 
 
-      <div class="navigation-tools">
-        <div class="search-bar">
-              <%= link_to('Logout', destroy_user_session_path, :class => "logout-link", :method => :delete) %>        
-      </div>
+        <div class="navigation-tools">
+          <div class="search-bar">
+                <%= link_to('Logout', destroy_user_session_path, :class => "logout-link", :method => :delete) %>        
+        </div>
 
-          <% else %>          
-            <nav role="navigation">
-      <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="/log in">Log In</a></li>
-        <li class="nav-link"><a >|</a></li>
-        <li class="nav-link"><a href="/about">Sign Up</a></li>
-        
-      </ul>
-    </nav>
-        
-    <% end %>
+            <% else %>          
+              <nav role="navigation">
+        <ul id="js-navigation-menu" class="navigation-menu show">
+          <li class="nav-link"><a href="/log in">Log In</a></li>
+          <li class="nav-link"><a >|</a></li>
+          <li class="nav-link"><a href="/about">Sign Up</a></li>
+          
+        </ul>
+      </nav>
+          
+      <% end %>
 
+        </div>
       </div>
     </div>
-  </div>
-</header>
-
+  </header>
+</div>
 
 <%= yield %>
 
