--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -24,7 +24,8 @@ p {
 }
 
 a {
-  color: $action-color;
+  color: #4dbc8c;
+  font-weight: bold;
   text-decoration: none;
   transition: color 0.1s linear;
 
