--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,9 @@
           <% else %>          
             <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
-        <li class="nav-link"><a href="/log in">Log In</a></li>
+        <li class="nav-link"><a href="/login">Log In</a></li>
         <li class="nav-link"><a >|</a></li>
-        <li class="nav-link"><a href="/about">Sign Up</a></li>
+        <li class="nav-link"><a href="/signup">Sign Up</a></li>
         
       </ul>
     </nav>
