updated name of characteristics2 table to Specs table.  renamed controllers and models.  Still need to update products table to reflect name change from Characteristic to specs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
         <li class="nav-link"><a href="/about">About Us</a></li>
         <% if user_signed_in? %>
           <li class="nav-link"><a href="/Market Deals">Market Deals</a></li>
+          <li class="nav-link"><a href="/Create RFP">Create RFP</a></li>
         <% else %>  
 
         <% end %>
