--- a/app/views/rfps/new.html.erb
+++ b/app/views/rfps/new.html.erb
@@ -26,32 +26,14 @@
       <div id="spec-wrapper1">
         <%= builder.text_field :commodity, :required => true,  placeholder: "Product (ex. Diesel)*" %>
       </div>
-        
-         <%= f.fields_for :spec do |spec_form| %>
-        
-      <div id="spec-wrapper2">
-        <%= spec_form.text_field :name, :required => true,  placeholder: "Characteristic (ex. Sulfur, Density)*" %>
-      </div>
 
-      <div id="spec-wrapper3">
-        <%= spec_form.text_field :unit, :required => true,  placeholder: "Unit (ex. kg/m3, ℃, etc.)*" %>
-      </div>
+        <%= f.fields_for :spec do |builder| %>
 
-      <div id="spec-wrapper4">
-        <%= spec_form.text_field :limit, :required => true,  placeholder: "max./min.*" %>
-      </div>
+         <%= render 'spec_fields', :f => builder %>
 
-      <div id="spec-wrapper5">
-        <%= spec_form.text_field :value, :required => true,  placeholder: "Value (ex. 3.50)*" %>
-      </div>
-    
-      <div id="spec-wrapper6">
-        <%= spec_form.text_field :test_methdo_reference, :required => true,  placeholder: "Test Method (ex. ISO 3016)*" %>
-      </div>
-
-      <p>
-        <%= link_to_add_forms "Add Forms", f, :specs %>
-      </p>
+          <% end %>
+  
+      <p><%= link_to_add_fields "Add Forms", f, :specs %></p>  
 
     </div> <!-- end of forms div -->
   </div> <!-- end of senior-spec-wrapper -->
@@ -64,9 +46,8 @@
       </div>
   
   </div> 
-  
-        <% end %>
 
+        
       <% end %>
 
     <% end %>
