--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -1,7 +1,5 @@
-<div class="fields">
-
   <div id="spec-wrapper2">
-    <%= f.text_field :name, :required => true,  placeholder: "Characteristic (ex. Sulfur, Density)*" %>
+    <%= f.text_field :name, :required => true,  placeholder: "Characteristic (ex. Sulfur)*" %>
   </div>
 
   <div id="spec-wrapper3">
@@ -20,6 +18,5 @@
     <%= f.text_field :test_method_reference, :required => true,  placeholder: "Test Method (ex. ISO 3016)*" %>
   </div>
 
-</div>  
 
 
