--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -12,6 +12,7 @@
 
   <div id="spec-wrapper5">
     <%= f.text_field :value, :required => true,  placeholder: "Value (ex. 3.50)*" %>
+    <%= f.hidden_field :type %>
   </div>
 
   <div id="spec-wrapper6">
