--- a/app/views/rfps/show.html.erb
+++ b/app/views/rfps/show.html.erb
@@ -1,23 +1,22 @@
-<% title "Show RFP" %>
+<title> "Show RFP"</title>
 
-<p>
-  <%=h @rfp.name %>
-</p>
+<p><%= @rfp.end_date %></p>
+<p><%= @rfp.order_size %></p>
+<p><%= @rfp.contract_length %></p>
+<p><%= @rfp.delivery_frequency %></p>
+<p><%= @rfp.delivery_date %></p>
 
-<ol>
-<% for product in @rfp.products %>
-  <li>
-    <%=h product.content %>
-    <ul>
-    <% for spec in product.specs %>
-      <li><%=h answer.content %></li>
+<p><%= @rfp.product.commodity %></p>
+  
+  <ul>
+    <% for spec in @rfp.product.specs %>
+      <li><%= spec.name %></li>
     <% end %>
-    </ul>
-  </li>
-<% end %>
-</ol>
+  </ul>
+
+
 
 <p>
   <% link_to "Edit", edit_rfp_path(@rfp) %> |
-  <% link_to "Destroy", @rfp, :confirm => 'Are you sure you want to delte RFP?', :method => : %> 
+  <% link_to "Destroy", rfp_path(@rfp), :confirm => 'Are you sure you want to delte RFP?', :method => :delete %> 
 </p>
