--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,15 +1,15 @@
-<div id="js-parallax-window" class="parallax-window">
-  <div class="parallax-static-content">
-    <b>Parallax Window</b>
+<div class="image-gradient-dynamic">
+  <img src="banner-image2.jpg" alt="">
+  <div class="overlay"></div>
+  <div class="copy">
+    <p></p>
   </div>
-  <div id="js-parallax-background" class="parallax-background"></div>
 </div>
 
 <ul class="bullets">
   <li class="bullet">
     <div class="bullet-icon bullet-icon-1">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
-" alt="">
+      <img src="oil-ship.png" alt="">
     </div>
     <div class="bullet-content">
       <h2>This Bullet Title</h2>
@@ -18,7 +18,7 @@
   </li>  
   <li class="bullet">
     <div class="bullet-icon bullet-icon-2">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+      <img src="oil-rig.png" alt="">
     </div>
     <div class="bullet-content">
       <h2>Another Bullet Title</h2>
@@ -27,7 +27,7 @@
   </li>
   <li class="bullet">
     <div class="bullet-icon bullet-icon-3">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
+      <img src="oil-truck.png" alt="">
     </div>
     <div class="bullet-content">
       <h2>Last Bullet Title</h2>
