--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -1,21 +1,21 @@
-  <div id="spec-wrapper2">
+  <div class="spec-wrapper2">
     <%= f.text_field :name, :required => true,  placeholder: "Characteristic (ex. Sulfur)*" %>
   </div>
 
-  <div id="spec-wrapper3">
+  <div class="spec-wrapper3">
     <%= f.text_field :unit, :required => true,  placeholder: "Unit (ex. kg/m3, ℃, etc.)*" %>
   </div>
 
-  <div id="spec-wrapper4">
+  <div class="spec-wrapper4">
     <%= f.text_field :limit, :required => true,  placeholder: "max./min.*" %>
   </div>
 
-  <div id="spec-wrapper5">
+  <div class="spec-wrapper5">
     <%= f.text_field :value, :required => true,  placeholder: "Value (ex. 3.50)*" %>
     <%= f.hidden_field :type %>
   </div>
 
-  <div id="spec-wrapper6">
+  <div class="spec-wrapper6">
     <%= f.text_field :test_method_reference, :required => true,  placeholder: "Test Method (ex. ISO 3016)*" %>
   </div>
 
