--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -16,9 +16,14 @@
 }
 
 .text-field-wrapper {
-  width: 310px;
-  margin: 65px 0px 0px 100px;
-  display: inline-block;
+  @include outer-container(100%);
+  .rfp-table-wrapper{
+  @include outer-container(20%);
+
+  }
+  .spec-table-wrapper{
+  @include outer-container(80%);
+  }
 }
 
 .text-field-wrapper input {
@@ -36,37 +41,55 @@
   text-align: center;
 }
 
+.spec-column-wrapper {
+  @include span-columns(12);
+  .spec-wrapper1 {
+    display: inline-block;
+    
+    li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 
-.spec-wrapper1 {
-  display: inline-block;
-  width: 140px;
-}
+  .spec-wrapper2 {
+    display: inline-block;
+    li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 
-.spec-wrapper2 {
-  display: inline-block;
+  .spec-wrapper3 {
+    display: inline-block;
   
-}
+      li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 
-.spec-wrapper3 {
-  display: inline-block;
-  width: 162px;
-}
+  .spec-wrapper4 {
+    display: inline-block;
+    
+    li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 
-.spec-wrapper4 {
-  display: inline-block;
-  width: 80px;
-}
+  .spec-wrapper5 {
+    display: inline-block;
+    
+    li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 
-.spec-wrapper5 {
-  display: inline-block;
-  width: 110px;
+  .spec-wrapper6 {
+    display: inline-block;
+    
+    li.block {
+      @include span-columns(2 of 12);
+    }
+  }
 }
-
-.spec-wrapper6 {
-  display: inline-block;
-  width: 174px;
-}
-
 
 .final-wrapper {
   margin-left: 575px;
@@ -85,7 +108,6 @@
 p {
   width: 300px;
 }
-
 
 //Explore all RFPs
 
