--- a/app/views/rfps/_spec_fields.html.erb
+++ b/app/views/rfps/_spec_fields.html.erb
@@ -19,5 +19,19 @@
     <%= f.text_field :test_method_reference, :required => true,  placeholder: "Test Method (ex. ISO 3016)*" %>
   </div>
 
+<!-- 
+  # autocomplete :rfp, :order_size
+   
 
+  # def index
+  #   if params[:order_size]
+  #     @rfp = Rfp.where(order_size: params[:order_size]).paginate(page: params[:page], per_page: 30)
+  #   elsif params[:id]
+  #     @rfp = Rfp.where(id: params[:id]).paginate(page: params[:page], per_page: 30)
+  #   elsif params[:ship_size]
+  #     @rfp = Rfp.product.where(ship_size: params[:rfp_ship_size]).paginate(page: params[:page], per_page: 30)
+  #   else
+  #     @rfp = Rfp.paginate(page: params[:page], per_page: 30)
+  #   end
+  # end -->
 
