--- a/app/views/rfps/_spec_show.html.erb
+++ b/app/views/rfps/_spec_show.html.erb
@@ -1,3 +1,4 @@
+<div class="test">
   <div class="spec-wrapper1">
     <h5>Product</h>
   </div>
@@ -21,3 +22,4 @@
   <div class="spec-wrapper6">
     <h5>Test Method Reference</h>
   </div>
+</div>
