--- a/app/assets/stylesheets/rfp.scss
+++ b/app/assets/stylesheets/rfp.scss
@@ -9,6 +9,7 @@
   margin: 0 auto;
   .signup-header {
   text-align: center;
+  font-size: 20px;
     } 
   input::-webkit-input-placeholder {
     font-size: 0.8em;
@@ -16,22 +17,18 @@
 }
 
 .text-field-wrapper {
-  input {
-    width: 90%;
-    padding-right: 0px;
-    border: 1px solid black;
-  }
   @include outer-container(100%);
-  .rfp-table-wrapper{
-    margin-left: 260px; 
+  .rfp-field-wrapper{
     float: left;  
-    border: 1px solid black;
-  @include outer-container(20%);
+    @include span-columns(12);
+    input {
+      width: 100%;
+      padding-right: 0px;
+    }
+    @include outer-container(17%);
+    margin-left: 180px; 
     .spec-header {
       text-align: center;
-    }
-    .rfp-table-wrapper{
-      @include span-columns(12);
     }
     .rfp-wrapper2 {
       display: inline-block;
@@ -43,12 +40,11 @@
     }
   } 
 
-  .spec-table-wrapper{
-    border: 1px solid black;
+  .spec-field-wrapper{
     display: inline-block;
-    width: 50%;
-    @include outer-container(50%);
-    margin-left: 20px;
+    width: 63%;
+    @include outer-container(70%);
+    margin-left: 100px;
     .spec-header {
       text-align: center;
     }
@@ -57,6 +53,8 @@
     }
     .spec-wrapper1 {
       display: inline-block;
+      @include span-columns(2.2 of 12);
+      min-width: 125px;
     }
     .spec-wrapper2 {
       display: inline-block;
@@ -72,11 +70,11 @@
     }
     .spec-wrapper5 {
       display: inline-block;
-      @include span-columns(1.5 of 12);
+      @include span-columns(1.3 of 12);
     }
     .spec-wrapper6 {
       display: inline-block;
-      @include span-columns(4 of 12);
+      @include span-columns(3 of 12);
       min-width: 180px;
     }
   }     
